--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,11 @@
 body{
   margin:0;
-  background-color: rgb(48, 43, 43);
+  background-color: rgb(36, 35, 35);
   font-family: Helvetica;
   height: 100%;
+}
+:root{
+  --btn-color: rgb(240, 240, 84);
 }
 .main{
   min-height: 100vh;
@@ -14,18 +17,21 @@ body{
   position: fixed;
   top: 0px;
   z-index: 999;
-  background-color: rgb(48, 43, 43);
+  background-color: rgb(36, 35, 35);
   width: 100%;
   height: 68px;
-  box-shadow: rgb(4 17 29 / 25%) 0px 0px 8px 0px;
   display: flex;
 }
 .navbar-brand{
   width: 65%;
   font-weight: 1000;
+  margin-top: 20px;
+}
+.navbar-end{
+  margin-top: 10px;
 }
 .connect-wallet{
-  background-color: yellow;
+  background-color: var(--btn-color);
   font-weight: 800;
   height: 50px;
   font-size: calc(5px + 2vmin);
@@ -48,14 +54,17 @@ body{
   margin-top: 68px;
 }
 .lottery-area{
-  width: 60%;
+  width: 57%;
   height:auto;
 }
 .run-lottery{
-  height: 40%;
-  border: 1px solid white;
-  width: 100%;
+  height: auto;
+  width: 90%;
   color: rgb(247, 243, 243);
+  padding: 1rem;
+  margin-left: 1rem;
+  background-color: rgb(56, 54, 54);
+  border-radius:20px;
 }
 .pay-money{
   height: 50%;
@@ -69,21 +78,31 @@ body{
   border: 1px solid black;
   margin-right: 0;
 }
-.info-lottery{
-  margin-left: 1rem;
-}
+
 .pot{
-  height: 30%;
   color: #fff;
+  display: flex;
+  width: 100%;
+  height: 30%;
+  margin-top: 20px;
 }
-.pot p{
-  font-size: 80px;
-  color: yellow;
-  margin-top: 0;
-  margin-bottom: 2rem;
+
+.prize-pool{
+  width: 50%;
+  text-align: center;
+}
+.countdown{
+  width: 50%;
+  margin-left: 30px;
+  border-left: 2px solid var(--btn-color);
+  margin-left: 1rem;
+  padding-left: 1rem;
+  text-align: center;
+  margin-bottom: 1rem;
+
 }
 .bt1{
-  background-color: yellow;
+  background-color: var(--btn-color);
   font-weight: 800;
   height: 50px;
   width: 200px;
@@ -93,25 +112,32 @@ body{
   cursor: pointer;
 }
 .bt2{
-  background-color: rgb(65, 212, 176);
+  background-color: rgb(98, 132, 245);
   font-weight: 800;
   height: 50px;
   width: 200px;
   font-size: calc(5px + 2vmin);
-  border-radius: 5px;
-  border: 1px solid black;
+  border-radius: 10px;
+  border: 2px solid white;
   cursor: pointer;
 }
 .result-lottery{
   height: auto;
-  width: 100%;
-  border-right: 1px solid white;
-  color:turquoise;
+  width: 90%;
+  color:rgb(98, 132, 245);
+  background-color: rgb(56, 54, 54);
+  border-radius:20px;
+  padding: 1rem;
+  margin-left: 1rem;
+  margin-top: 1rem;
 }
 .participants{
   height: auto;
-  width: 40%;
-  border: 1px solid white;
+  width: 39%;
+  padding: 1rem;
+  background-color: rgb(56, 54, 54);
+  border-radius:20px;
+
 }
 .amount-players{
   display: flex;
@@ -125,18 +151,15 @@ body{
   display: flex;
 }
 .address-player{
-  width: 75%;
+  width: 70%;
   height: auto;
-
 }
 .ticket-player{
-  width: 23%;
+  width: 25%;
   height: auto;
-  
 }
 ul .li-player{
   list-style-type: none;
-  width: 33rem !important;
 }
 
 
